Removed --add-modules java.se.ee